--- a/Sleeper Bot.ipynb
+++ b/Sleeper Bot.ipynb
@@ -18,6 +18,7 @@
     "from discord_webhook import DiscordWebhook, DiscordEmbed\n",
     "\n",
     "\n",
+    "#sample dictionary used for testing purposes - will be replaced by dictionary created from scarped projections/performances",
     "player_dictionary  = {'Kevin Durant': [39, 27],\n",
     "             'Lebron James': [12, 53],\n",
     "             'Rudy Gobert': [69, 32],\n",
